@@ -280,18 +280,15 @@ var app = new Vue({
             }, 50);
         }, false);
 
-        if (window.matchMedia('(display-mode: standalone)').matches || window.matchMedia('(display-mode: fullscreen)').matches) {
-            // https://stackoverflow.com/questions/43329654/android-back-button-on-a-progressive-web-thislication-closes-de-this
-            window.addEventListener('load', function() {
-                window.history.pushState({ }, '');
-            }, false);
-
-            window.addEventListener('popstate', function(event) {
-                window.history.pushState({ }, '');
-                bus.$emit('esc');
-                event.preventDefault();
-            }, false);
-        }
+        // https://stackoverflow.com/questions/43329654/android-back-button-on-a-progressive-web-thislication-closes-de-this
+        window.addEventListener('load', function() {
+            window.history.pushState({ }, '');
+        }, false);
+        window.addEventListener('popstate', function(event) {
+            window.history.pushState({ }, '');
+            bus.$emit('esc');
+            event.preventDefault();
+        }, false);
 
         // https://github.com/timruffles/mobile-drag-drop/issues/77
         window.addEventListener( 'touchmove', function() {});
